Making Customer Testimonial Section

--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400&display=swap" rel="stylesheet" />
-  <title>Gori Fastfood</title>
+  <title>Eat_It & Love_It</title>
 </head>
 
 <body>
   <header>
     <nav>
       <div class="row">
-        <img src="resources/images/logo-white.png" alt="Omnifood Logo" class="logo" />
+        <img src="resources/images/logo-white.png" alt="Eat_It & Love_It Logo" class="logo" />
         <ul class="main-nav">
           <li><a href="#">Food delivery </a></li>
-          <li><a href="#">How it works </a></li>
-          <li><a href="#">Our cities </a></li>
+          <li><a href="#how-it-works">How it works </a></li>
+          <li><a href="#our-cities">Our cities </a></li>
           <li><a href="#">Sign up </a></li>
         </ul>
       </div>
@@ -41,7 +41,7 @@
     <div class="row">
       <h2>Get food fast &mdash; not fast food</h2>
       <p class="Copyright-LongText">
-        Hello, we’re Gori Fastfood, your new premium food delivery service. We
+        Hello, we’re Eat_It & Love_It, your new premium food delivery service. We
         know you’re always busy. No time for cooking. So let us take care of
         that, we’re really good at it, we promise!
       </p>
@@ -150,7 +150,7 @@
         <span>Granola</span>
       </li>
 
-      <li>
+      <!-- <li>
         <figure class="meals-photo fade-effect">
           <img src="resources/images/5.jpg" alt="Paleo beef steak with vegetables" />
         </figure>
@@ -175,7 +175,7 @@
         <figure class="meals-photo fade-effect">
           <img src="resources/images/8.jpg" alt="Granola with cherries and strawberries" />
         </figure>
-        <span>Granola</span>
+        <span>Granola</span> -->
 
 
       </li>
@@ -183,7 +183,7 @@
   </section>
 
 
-  <section class="how-it-works">
+  <section class="how-it-works" id="how-it-works">
     <div class="row">
       <h2 class="hiw-heading">How it works &mdash; Simple as 1, 2, 3</h2>
     </div>
@@ -209,13 +209,14 @@
           <p>Enjoy your meal after less than 20 minutes. See you the next time!</p>
         </div>
         <a href="#"><img class="btn-appstore" src="resources/images/download-app.svg" alt="appstore-button"></a>
-        <a href="#"><img class="btn-playstore" src="resources/images/download-app-android.png" alt=""></a>
+        <a href="#"><img class="btn-playstore" src="resources/images/download-app-android.svg"
+            alt="playstore-button"></a>
       </div>
     </div>
   </section>
 
 
-  <section class="ciies-section">
+  <section class="ciies-section" id="our-cities">
     <div class="row">
       <h2 class="cities_cities">We're currently in these cities</h2>
       <div class="row">
@@ -289,20 +290,41 @@
       </div>
     </div>
   </section>
+
+  <section class="Customer-Testimonials">
+    <div class="row">
+      <h2 class="C-T-heading">Our customers can't live without us</h2>
+    </div>
+    <div class="row">
+      <div class="col span-1-of-3">
+        <blockquote>
+          Eat_It & Love_It is just awesome! I just launched a startup which leaves me with no time for cooking, so Eat
+          It & Love It is a
+          life-saver. Now that I got used to it, I couldn't live without my daily meals!
+          <cite><img src="resources/images/customer-1.jpg" alt=""> Alberto Duncan</cite>
+        </blockquote>
+      </div>
+
+      <div class="col span-1-of-3">
+        <blockquote>
+          Inexpensive, healthy and great-tasting meals, delivered right to my home. We have lots of food delivery here
+          in Lisbon, but no one comes even close to Omifood. Me and my family are so in love!
+          <cite><img src="resources/images/customer-2.jpg" alt=""> Joana Silva</cite>
+        </blockquote>
+      </div>
+
+      <div class="col span-1-of-3">
+        <blockquote>
+          I was looking for a quick and easy food delivery service in San Franciso. I tried a lot of them and ended up
+          with Eat_It & Love_It. Best food delivery service in the Bay Area. Keep up the great work!
+          <cite><img src="resources/images/customer-3.jpg" alt=""> Milton Chapman</cite>
+        </blockquote>
+      </div>
+  </section>
 </body>
 
 </html>
 
 
 
-
-
-
-
-
-
-
-
-
-
--->
+<!-- -->
