Adding Sign-Up Section

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <li><a href="#">Food delivery </a></li>
           <li><a href="#how-it-works">How it works </a></li>
           <li><a href="#our-cities">Our cities </a></li>
-          <li><a href="#">Sign up </a></li>
+          <li><a href="#signup">Sign up </a></li>
         </ul>
       </div>
     </nav>
@@ -148,36 +148,6 @@
           <img src="resources/images/8.jpg" alt="Granola with cherries and strawberries" />
         </figure>
         <span>Granola</span>
-      </li>
-
-      <!-- <li>
-        <figure class="meals-photo fade-effect">
-          <img src="resources/images/5.jpg" alt="Paleo beef steak with vegetables" />
-        </figure>
-        <span>Paleo beef steak</span>
-      </li>
-
-      <li>
-        <figure class="meals-photo fade-effect">
-          <img src="resources/images/6.jpg" alt="Healthy baguette with egg and vegetables" />
-        </figure>
-        <span>Healthy baguette</span>
-      </li>
-
-      <li>
-        <figure class="meals-photo fade-effect">
-          <img src="resources/images/7.jpg" alt="Burger with cheddar and bacon" />
-        </figure>
-        <span>Burger with cheddar and bacon</span>
-      </li>
-
-      <li>
-        <figure class="meals-photo fade-effect">
-          <img src="resources/images/8.jpg" alt="Granola with cherries and strawberries" />
-        </figure>
-        <span>Granola</span> -->
-
-
       </li>
     </ul>
   </section>
@@ -320,6 +290,76 @@
           <cite><img src="resources/images/customer-3.jpg" alt=""> Milton Chapman</cite>
         </blockquote>
       </div>
+  </section>
+
+  <section class="section-plans" id="signup">
+    <div class="row">
+      <h2 class="sign-up">Start eating delicious today</h2>
+    </div>
+    <div class="row">
+      <div class="col span-1-of-3">
+        <div class="plan-box">
+          <div>
+            <h3 class="plan-name">Premium</h3>
+            <p class="plan-price">399$ <span>/ month</span></p>
+            <p class="plan-price-meal">That’s only 13.30$ per meal</p>
+          </div>
+          <div>
+            <ul>
+              <li><i class="icon ion-ios-checkmark icon-small"></i>1 meal every day</li>
+              <li><i class="icon ion-ios-checkmark icon-small"></i>Order 24/7</li>
+              <li><i class="icon ion-ios-checkmark icon-small"></i>Access to newest creations</li>
+              <li><i class="icon ion-ios-checkmark icon-small"></i>Free delivery</li>
+            </ul>
+          </div>
+          <div>
+            <a href="#" class="btn complete-btn">Sign-Up Now</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col span-1-of-3">
+        <div class="plan-box">
+          <div>
+            <h3 class="plan-name">Pro</h3>
+            <p class="plan-price">149$ <span>/ month</span></p>
+            <p class="plan-price-meal">That’s only 14.90$ per meal</p>
+          </div>
+          <div>
+            <ul>
+              <li><i class="icon ion-ios-checkmark icon-small"></i>1 meal 10 days/month</li>
+              <li><i class="icon ion-ios-checkmark icon-small"></i>Order 24/7</li>
+              <li><i class="icon ion-ios-checkmark icon-small"></i>Access to newest creations</li>
+              <li><i class="icon ion-ios-checkmark icon-small"></i>Free delivery</li>
+            </ul>
+          </div>
+          <div>
+            <a href="#" class="btn ghost-btn">Sign-Up Now</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col span-1-of-3">
+        <div class="plan-box">
+          <div>
+            <h3 class="plan-name">Starter</h3>
+            <p class="plan-price">19$ <span>/ meal</span></p>
+            <p class="plan-price-meal"></p>
+          </div>
+          <div>
+            <ul>
+              <li><i class="icon ion-ios-checkmark icon-small"></i>1 meal </li>
+              <li><i class="icon ion-ios-checkmark icon-small"></i>Order from 8 am to 12 pm</li>
+              <li><i class="icon ion-ios-close icon-small"></i></li>
+              <li><i class="icon ion-ios-checkmark icon-small"></i>Free delivery</li>
+            </ul>
+          </div>
+          <div>
+            <a href="#" class="btn ghost-btn">Sign-Up Now</a>
+          </div>
+        </div>
+      </div>
+    </div>
   </section>
 </body>
 
