--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
       <form method="post" action="#" class="contact-form">
         <div class="row">
           <div class="col span-1-of-3">
-            <label>Name</label>
+            <label for="name">Name</label>
           </div>
           <div class="col span-2-of-3">
             <input type="text" name="name" id="name" placeholder="Your Name" required>
@@ -378,7 +378,7 @@
         </div>
         <div class="row">
           <div class="col span-1-of-3">
-            <label>Email</label>
+            <label for="email">Email</label>
           </div>
           <div class="col span-2-of-3">
             <input type="email" name="email" id="email" placeholder="Your Email" required>
@@ -386,7 +386,7 @@
         </div>
         <div class="row">
           <div class="col span-1-of-3">
-            <label>How did you find us?</label>
+            <label for="find-us">How did you find us?</label>
           </div>
           <div class="col span-2-of-3">
             <select name="find-us" id="find-us">
@@ -398,7 +398,7 @@
           </div>
           <div class="row">
             <div class="col span-1-of-3">
-              <label>Newsletter</label>
+              <label for="news">Newsletter</label>
             </div>
             <div class="col span-2-of-3">
               <input type="checkbox" name="news" id="news" checked>Yes, please!
@@ -406,7 +406,7 @@
           </div>
           <div class="row">
             <div class="col span-1-of-3">
-              <label>Drop us a line</label>
+              <label for="message">Drop us a line</label>
             </div>
             <div class="col span-2-of-3">
               <textarea name="message" id="message" cols="30" rows="10"
@@ -428,18 +428,3 @@
 </body>
 
 </html>
-
-<!-- 
-
-  Section 7: Contact form
-Title: 
-
-Fields to include:
-Name
-Email
-How did you find us?
-Newsletter
-
-
-
- -->
