--- a/index.html
+++ b/index.html
@@ -364,31 +364,31 @@
 
   <section class="section-form">
     <div class="row">
-      <h2>We're happy to hear from you</h2>
+      <h2 class="formhead">We're happy to hear from you</h2>
     </div>
     <div class="row">
       <form method="post" action="#" class="contact-form">
         <div class="row">
-          <div class="col span-1-of-3">
+          <div class="col coly span-1-of-3">
             <label for="name">Name</label>
           </div>
-          <div class="col span-2-of-3">
+          <div class="col coly span-2-of-3">
             <input type="text" name="name" id="name" placeholder="Your Name" required>
           </div>
         </div>
         <div class="row">
-          <div class="col span-1-of-3">
+          <div class="col coly span-1-of-3">
             <label for="email">Email</label>
           </div>
-          <div class="col span-2-of-3">
+          <div class="col coly span-2-of-3">
             <input type="email" name="email" id="email" placeholder="Your Email" required>
           </div>
         </div>
         <div class="row">
-          <div class="col span-1-of-3">
-            <label for="find-us">How did you find us?</label>
+          <div class="col coly span-1-of-3">
+            <label for="find-us">Find us! How?</label>
           </div>
-          <div class="col span-2-of-3">
+          <div class="col coly span-2-of-3">
             <select name="find-us" id="find-us">
               <option value="friends">Friends</option>
               <option value="search" selected>Search Engine</option>
@@ -397,27 +397,26 @@
             </select>
           </div>
           <div class="row">
-            <div class="col span-1-of-3">
+            <div class="col coly span-1-of-3">
               <label for="news">Newsletter</label>
             </div>
-            <div class="col span-2-of-3">
+            <div class="col coly span-2-of-3">
               <input type="checkbox" name="news" id="news" checked>Yes, please!
             </div>
           </div>
           <div class="row">
-            <div class="col span-1-of-3">
+            <div class="col coly span-1-of-3">
               <label for="message">Drop us a line</label>
             </div>
-            <div class="col span-2-of-3">
-              <textarea name="message" id="message" cols="30" rows="10"
-                placeholder="Your Message about US!!"></textarea>
+            <div class="col coly span-2-of-3">
+              <textarea name="message" id="message" cols="30" rows="0" placeholder="Your Message about US!!"></textarea>
             </div>
           </div>
           <div class="row">
-            <div class="col span-1-of-3">
+            <div class="col coly span-1-of-3">
               <label>&nbsp;</label>
             </div>
-            <div class="col span-2-of-3">
+            <div class="col coly span-2-of-3">
               <input type="submit" value="Send it">
             </div>
           </div>
@@ -425,6 +424,33 @@
       </form>
     </div>
   </section>
+
+  <footer>
+    <div class="row">
+      <div class="col span-1-of-2">
+        <ul class="footer-nav">
+          <li><a href="#">About us</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">Press</a></li>
+          <li><a href="#">iOS App</a></li>
+          <li><a href="#">Android App</a></li>
+        </ul>
+      </div>
+      <div class="col span-1-of-2">
+        <ul class="social-media-nav">
+          <li><a href="#"><i class="icon ion-logo-facebook"></i></a></li>
+          <li><a href="#"><i class="icon ion-logo-twitter"></i></a></li>
+          <li><a href="#"><i class="icon ion-logo-googleplus"></i></a></li>
+          <li><a href="#"><i class="icon ion-logo-instagram"></i></a></li>
+        </ul>
+      </div>
+    </div>
+    <div class="row">
+      <p>
+        Copyright &copy; 2022 by Eat it & Love it!!. All rights reserved
+      </p>
+    </div>
+  </footer>
 </body>
 
 </html>
