--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" type="text/css" href="vendors\css\grid.css" />
   <link href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="resources/css/style.css" />
+  <link rel="stylesheet" href="resources/css/mediaqueries.css">
   <!-- <link rel="stylesheet" href="vendors/css/ionicons.min.css" /> -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -89,7 +90,6 @@
     </div>
   </section>
 
-
   <section class="meals-section" id="meals-section">
     <div>
       <h2 class="our-menu">Our Menu</h2>
@@ -152,7 +152,6 @@
     </ul>
   </section>
 
-
   <section class="how-it-works" id="how-it-works">
     <div class="row">
       <h2 class="hiw-heading">How it works &mdash; Simple as 1, 2, 3</h2>
@@ -184,7 +183,6 @@
       </div>
     </div>
   </section>
-
 
   <section class="ciies-section" id="our-cities">
     <div class="row">
@@ -439,7 +437,7 @@
       <div class="col span-1-of-2">
         <ul class="social-media-nav">
           <li><a href="#"><i class="icon ion-logo-facebook"></i></a></li>
-          <li><a href="#"><i class="icon ion-logo-twitter"></i></a></li>
+          <li><a href="#"><i class="icon ion-logo-twitter only-twitter"></i></a></li>
           <li><a href="#"><i class="icon ion-logo-googleplus"></i></a></li>
           <li><a href="#"><i class="icon ion-logo-instagram"></i></a></li>
         </ul>
