Done with responsive

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         <figure class="meals-photo fade-effect">
           <img src="resources/images/2.jpg" alt="Simple italian pizza with cherry tomatoes" />
         </figure>
-        <span>Italian pizza </span>
+        <span>Italian pizza</span>
       </li>
 
       <li>
@@ -425,8 +425,8 @@
 
   <footer>
     <div class="row">
-      <div class="col span-1-of-2">
-        <ul class="footer-nav">
+      <div class="col span-1-of-2 footer-nav-width">
+        <ul class="footer-nav ">
           <li><a href="#">About us</a></li>
           <li><a href="#">Blog</a></li>
           <li><a href="#">Press</a></li>
@@ -434,7 +434,7 @@
           <li><a href="#">Android App</a></li>
         </ul>
       </div>
-      <div class="col span-1-of-2">
+      <div class="col span-1-of-2 footer-nav-width">
         <ul class="social-media-nav">
           <li><a href="#"><i class="icon ion-logo-facebook"></i></a></li>
           <li><a href="#"><i class="icon ion-logo-twitter only-twitter"></i></a></li>
