--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <nav>
       <div class="row">
         <img src="resources/images/logo-white.png" alt="Eat_It & Love_It Logo" class="logo" />
+        <img src="resources/images/logo.png" alt="Eat_It & Love_It Logo" class="logo-black" />
         <ul class="main-nav">
           <li><a href="#">Food delivery </a></li>
           <li><a href="#how-it-works">How it works </a></li>
@@ -38,7 +39,7 @@
     </div>
   </header>
 
-  <section class="features-section">
+  <section class="features-section js--features-section">
     <div class="row">
       <h2>Get food fast &mdash; not fast food</h2>
       <p class="Copyright-LongText">
@@ -449,6 +450,13 @@
       </p>
     </div>
   </footer>
+  <script src="//cdn.jsdelivr.net/respond/1.4.2/respond.min.js"></script>
+  <script src="//cdn.jsdelivr.net/html5shiv/3.7.2/html5shiv.min.js"></script>
+  <script src="//cdn.jsdelivr.net/selectivizr/1.0.3b/selectivizr.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+  <script src="vendors/js/jquery.waypoints.min.js"></script>
+  <script src="resources/js/script.js"></script>
+
 </body>
 
 </html>
