--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="resources/css/style.css" />
   <link rel="stylesheet" href="resources/css/mediaqueries.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
   <!-- <link rel="stylesheet" href="vendors/css/ionicons.min.css" /> -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -34,12 +35,12 @@
     <div class="hero-text-box">
       <h1>Hello!! Mouth Watering Meals.</h1>
       <br />
-      <a class="btn complete-btn" href="#">I'm hungry</a>
-      <a class="btn ghost-btn" href="#meals-section">Show me more</a>
+      <a class="btn complete-btn" href="#meals-section">I'm hungry</a>
+      <a class="btn ghost-btn" href="#features-section">Show me more</a>
     </div>
   </header>
 
-  <section class="features-section js--features-section">
+  <section class=" features-section js--features-section">
     <div class="row">
       <h2>Get food fast &mdash; not fast food</h2>
       <p class="Copyright-LongText">
@@ -48,7 +49,7 @@
         that, we’re really good at it, we promise!
       </p>
     </div>
-    <div class="row">
+    <div class="row js--wp-1">
       <div class="col span-1-of-4 box">
         <i class="ion-ios-infinite icon-big"></i>
         <h3>Up to 365 days/year</h3>
@@ -160,7 +161,7 @@
 
     <div class="row">
       <div class="col span-1-of-2 steps-box">
-        <img class="app-screen" src="resources/images/app-iPhone.png" alt="app-screen">
+        <img class="app-screen js--wp-2" src="resources/images/app-iPhone.png" alt="app-screen">
       </div>
 
       <div class="col span-1-of-2 steps-box">
@@ -188,7 +189,7 @@
   <section class="ciies-section" id="our-cities">
     <div class="row">
       <h2 class="cities_cities">We're currently in these cities</h2>
-      <div class="row">
+      <div class="row js--wp-3">
         <div class="col span-1-of-4 box">
           <img src="resources/images/lisbon-3.jpg" alt="Lisbon">
           <h3>Lisbon</h3>
@@ -297,7 +298,7 @@
     </div>
     <div class="row">
       <div class="col span-1-of-3">
-        <div class="plan-box">
+        <div class="plan-box js--wp-4">
           <div>
             <h3 class="plan-name">Premium</h3>
             <p class="plan-price">399$ <span>/ month</span></p>
