Adding Mobile Navigation Bar

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" type="text/css" href="vendors\css\normalize.css" />
-  <link rel="stylesheet" type="text/css" href="vendors\css\grid.css" />
-  <link href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="resources/css/style.css" />
   <link rel="stylesheet" href="resources/css/mediaqueries.css">
+  <link rel="stylesheet" type="text/css" href="vendors\css\normalize.css" />
+  <link rel="stylesheet" type="text/css" href="vendors\css\grid.css" />
+  <link rel="stylesheet" href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
   <!-- <link rel="stylesheet" href="vendors/css/ionicons.min.css" /> -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -24,7 +24,10 @@
       <div class="row">
         <img src="resources/images/logo-white.png" alt="Eat_It & Love_It Logo" class="logo" />
         <img src="resources/images/logo.png" alt="Eat_It & Love_It Logo" class="logo-black" />
-        <ul class="main-nav">
+        <a class="mobile-nav-icon js--nav-icon">
+          <i class="icon ion-md-menu"></i>
+        </a>
+        <ul class="main-nav js--main-nav">
           <li><a href="#">Food delivery </a></li>
           <li><a href="#how-it-works">How it works </a></li>
           <li><a href="#our-cities">Our cities </a></li>
