--- a/index.html
+++ b/index.html
@@ -15,15 +15,16 @@
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400&display=swap" rel="stylesheet" />
-  <title>Eat_It & Love_It</title>
+  <link rel="shortcut icon" href="resources\images\favicon.ico" type="image/x-icon">
+  <title>Eat It Then Love It</title>
 </head>
 
 <body>
   <header>
     <nav>
       <div class="row">
-        <img src="resources/images/logo-white.png" alt="Eat_It & Love_It Logo" class="logo" />
-        <img src="resources/images/logo.png" alt="Eat_It & Love_It Logo" class="logo-black" />
+        <img src="resources/images/LogO (2).png" alt="Eat_It & Love_It Logo" class="logo" />
+        <img src="resources/images/LogO (2).png" alt="Eat_It & Love_It Logo" class="logo-black" />
         <a class="mobile-nav-icon js--nav-icon">
           <i class="icon ion-md-menu"></i>
         </a>
