Optimized the content for better responsiveness

--- a/index.html
+++ b/index.html
@@ -5,17 +5,19 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description"
+    content="Eat It Then Love It is your one step solution for all of your cravings. Get super&#8209;delicious food at your doorsteps, just a few click away" />
   <link rel="stylesheet" href="resources/css/style.css" />
   <link rel="stylesheet" href="resources/css/mediaqueries.css">
-  <link rel="stylesheet" type="text/css" href="vendors\css\normalize.css" />
-  <link rel="stylesheet" type="text/css" href="vendors\css\grid.css" />
+  <link rel="stylesheet" type="text/css" href="vendors/css/normalize.css" />
+  <link rel="stylesheet" type="text/css" href="vendors/css/grid.css" />
   <link rel="stylesheet" href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
   <!-- <link rel="stylesheet" href="vendors/css/ionicons.min.css" /> -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400&display=swap" rel="stylesheet" />
-  <link rel="shortcut icon" href="resources\images\favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="resources/images/favicon.ico" type="image/x-icon">
   <title>Eat It Then Love It</title>
 </head>
 
@@ -23,8 +25,8 @@
   <header>
     <nav>
       <div class="row">
-        <img src="resources/images/LogO (2).png" alt="Eat_It & Love_It Logo" class="logo" />
-        <img src="resources/images/LogO (2).png" alt="Eat_It & Love_It Logo" class="logo-black" />
+        <img src="resources/images/LogO(2).png" alt="Eat_It & Love_It Logo" class="logo" />
+        <img src="resources/images/LogO(2).png" alt="Eat_It & Love_It Logo" class="logo-black" />
         <a class="mobile-nav-icon js--nav-icon">
           <i class="icon ion-md-menu"></i>
         </a>
@@ -194,7 +196,7 @@
     <div class="row">
       <h2 class="cities_cities">We're currently in these cities</h2>
       <div class="row js--wp-3">
-        <div class="col span-1-of-4 box">
+        <div class="col span-1-of-4 box layoutadjustment">
           <img src="resources/images/lisbon-3.jpg" alt="Lisbon">
           <h3>Lisbon</h3>
           <div class="city-features">
@@ -207,11 +209,11 @@
           </div>
           <div class="city-features">
             <i class="icon ion-logo-twitter"></i>
-            <a href="#" class="twitter-links">@gorifastfood_lx</a>
+            <a href="#" class="twitter-links">@eatitthenloveit_lx</a>
           </div>
         </div>
 
-        <div class="col span-1-of-4 box">
+        <div class="col span-1-of-4 box layoutadjustment">
           <img src="resources/images/san-francisco.jpg" alt="san-francisco">
           <h3>San Francisco</h3>
           <div class="city-features">
@@ -224,11 +226,11 @@
           </div>
           <div class="city-features">
             <i class="icon ion-logo-twitter"></i>
-            <a href="#" class="twitter-links">@gorifastfood_sf</a>
+            <a href="#" class="twitter-links">@eatitthenloveit_sf</a>
           </div>
         </div>
 
-        <div class="col span-1-of-4 box">
+        <div class="col span-1-of-4 box layoutadjustment">
           <img src="resources/images/berlin.jpg" alt="Berlin">
           <h3>Berlin</h3>
           <div class="city-features">
@@ -241,11 +243,11 @@
           </div>
           <div class="city-features">
             <i class="icon ion-logo-twitter"></i>
-            <a href="#" class="twitter-links">@gorifastfood_berlin</a>
+            <a href="#" class="twitter-links">@eatitthenloveit_berlin</a>
           </div>
         </div>
 
-        <div class="col span-1-of-4 box">
+        <div class="col span-1-of-4 box layoutadjustment">
           <img src="resources/images/london.jpg" alt="London">
           <h3>London</h3>
           <div class="city-features">
@@ -258,7 +260,7 @@
           </div>
           <div class="city-features">
             <i class="icon ion-logo-twitter"></i>
-            <a href="#" class="twitter-links">@gorifastfood_london</a>
+            <a href="#" class="twitter-links">@eatitthenloveit_london</a>
           </div>
         </div>
       </div>
@@ -294,6 +296,7 @@
           <cite><img src="resources/images/customer-3.jpg" alt=""> Milton Chapman</cite>
         </blockquote>
       </div>
+    </div>
   </section>
 
   <section class="section-plans" id="signup">
@@ -301,7 +304,7 @@
       <h2 class="sign-up">Start eating delicious today</h2>
     </div>
     <div class="row">
-      <div class="col span-1-of-3">
+      <div class="col span-1-of-3 colz">
         <div class="plan-box js--wp-4">
           <div>
             <h3 class="plan-name">Premium</h3>
@@ -322,7 +325,7 @@
         </div>
       </div>
 
-      <div class="col span-1-of-3">
+      <div class="col span-1-of-3 colz">
         <div class="plan-box">
           <div>
             <h3 class="plan-name">Pro</h3>
@@ -343,7 +346,7 @@
         </div>
       </div>
 
-      <div class="col span-1-of-3">
+      <div class="col span-1-of-3 colz">
         <div class="plan-box">
           <div>
             <h3 class="plan-name">Starter</h3>
@@ -413,7 +416,7 @@
               <label for="message">Drop us a line</label>
             </div>
             <div class="col coly span-2-of-3">
-              <textarea name="message" id="message" cols="30" rows="0" placeholder="Your Message about US!!"></textarea>
+              <textarea name="message" id="message" cols="30" placeholder="Your Message about US!!"></textarea>
             </div>
           </div>
           <div class="row">
@@ -440,7 +443,7 @@
           <li><a href="#">Android App</a></li>
         </ul>
       </div>
-      <div class="col span-1-of-2 footer-nav-width">
+      <div class="col span-1-of-2 footer-nav-width social-media-icons">
         <ul class="social-media-nav">
           <li><a href="#"><i class="icon ion-logo-facebook"></i></a></li>
           <li><a href="#"><i class="icon ion-logo-twitter only-twitter"></i></a></li>
@@ -451,7 +454,7 @@
     </div>
     <div class="row">
       <p>
-        Copyright &copy; 2022 by Eat it & Love it!!. All rights reserved
+        Copyright &copy; 2022 by Eat it then Love it!!. All rights reserved
       </p>
     </div>
   </footer>
